# vaest

./: .gitignore  CLAUDE.md  STRIPE.md  app-legacy.html  app.html  company.html  concept.html  contact.html  desktop-update.json  developers.html  features.html  home.html  index-legacy-backup.html  index.html  news.html  package-lock.json  package.json  pricing.html  privacy.html  product.html  refund.html  robots.txt  sitemap.xml  supabase-rls.sql  terms.html  vercel.json
.claude/: launch.json  serve.cjs
api/: access.js  account.js  chat.js  checkout.js  confirm.js  extract.js  keys.js  log.js  portal.js  share.js  signup.js  stripe-webhook.js
api/v1/: crystallize.js  present.js  refine.js  think.js
css/: app.css  nav.css  site.css
desktop/: .gitignore  README.md  package-lock.json  package.json
desktop/shell/: index.html
desktop/src-tauri/: Cargo.toml  tauri.conf.json
desktop/src-tauri/capabilities/: default.json
desktop/src-tauri/icons/: icon.icns
desktop/src-tauri/src/: lib.rs  main.rs
email-templates/: README.md  confirm-signup.html  invite.html  magic-link.html  reset-password.html  welcome.html
js/: app.js  site.js
lib/: apiengine.js  apikeys.js  billing.js  openai.js  plans.js  ratelimit.js
scripts/: stripe-setup.mjs
tests/: audit.mjs  eval-run.mjs  openai.mjs  server.mjs  ssrf.mjs  unit.mjs
