[package]
name = "vaest-desktop"
version = "3.0.0"
description = "VÆST desktop shell"
authors = ["ORIONS.Agency"]
edition = "2021"

[lib]
name = "vaest_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-updater = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[profile.release]
codegen-units = 1
lto = true
opt-level = "s"
panic = "abort"
strip = true
